@@ -79,19 +79,27 @@ extern	int	CONFIG_DBPORT;
 #define DB_TRIGGER	struct trigger_type
 
 #ifdef HAVE_SQLITE3
+
+	#include "mutexs.h"
+
 	#define DB_ROW		char **
 	#define	DB_RESULT	ZBX_SQ_DB_RESULT*
 	#define	DBfree_result	SQ_DBfree_result
 
 	typedef struct zbx_sq_db_result_s
 	{
-		sqlite3_stmt	*sq_result;
-		int		fld_num;
+		int		curow;
+		char		**data;
+		int		nrow;
+		int		ncolumn;
+
 		DB_ROW		values;
 	} ZBX_SQ_DB_RESULT;
 
 void	SQ_DBfree_result(DB_RESULT result);
 
+	extern ZBX_MUTEX	sqlite_access;
+	
 #endif
 
 #ifdef HAVE_MYSQL
